xhci: dbc: enable back DbC in resume if it was enabled before suspend (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11494,6 +11494,7 @@
 	patches.kernel.org/6.12.56-096-USB-serial-option-add-Telit-FN920C04-ECM-comp.patch
 	patches.kernel.org/6.12.56-097-usb-core-quirks-Add-Huawei-ME906S-to-wakeup-q.patch
 	patches.kernel.org/6.12.56-098-usb-raw-gadget-do-not-limit-transfer-length.patch
+	patches.kernel.org/6.12.56-099-xhci-dbc-enable-back-DbC-in-resume-if-it-was-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
