--- a/series.conf
+++ b/series.conf
@@ -11501,6 +11501,7 @@
 	patches.kernel.org/6.12.56-103-comedi-fix-divide-by-zero-in-comedi_buf_munge.patch
 	patches.kernel.org/6.12.56-104-mei-me-add-wildcat-lake-P-DID.patch
 	patches.kernel.org/6.12.56-105-objtool-rust-add-one-more-noreturn-Rust-funct.patch
+	patches.kernel.org/6.12.56-106-misc-fastrpc-Fix-dma_buf-object-leak-in-fastr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
