--- a/series.conf
+++ b/series.conf
@@ -11399,6 +11399,7 @@
 	patches.kernel.org/6.12.56-001-exec-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.56-002-nios2-ensure-that-memblock.current_limit-is-s.patch
 	patches.kernel.org/6.12.56-003-hfs-clear-offset-and-space-out-of-valid-recor.patch
+	patches.kernel.org/6.12.56-004-hfs-make-proper-initalization-of-struct-hfs_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
