--- a/series.conf
+++ b/series.conf
@@ -11438,6 +11438,7 @@
 	patches.kernel.org/6.12.56-040-ptp-ocp-Fix-typo-using-index-1-instead-of-i-i.patch
 	patches.kernel.org/6.12.56-041-sctp-avoid-NULL-dereference-when-chunk-data-b.patch
 	patches.kernel.org/6.12.56-042-net-phy-micrel-always-set-shared-phydev-for-L.patch
+	patches.kernel.org/6.12.56-043-net-mlx5-Fix-IPsec-cleanup-over-MPV-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
