net/smc: fix general protection fault in __smc_diag_dump (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11432,6 +11432,7 @@
 	patches.kernel.org/6.12.56-034-net-mlx5e-Reuse-per-RQ-XDP-buffer-to-avoid-st.patch
 	patches.kernel.org/6.12.56-035-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
 	patches.kernel.org/6.12.56-036-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
+	patches.kernel.org/6.12.56-037-net-smc-fix-general-protection-fault-in-__smc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
