serial: sc16is7xx: remove useless enable of enhanced features (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11509,6 +11509,7 @@
 	patches.kernel.org/6.12.56-111-serial-8250_dw-handle-reset-control-deassert-.patch
 	patches.kernel.org/6.12.56-112-serial-8250_exar-add-support-for-Advantech-2-.patch
 	patches.kernel.org/6.12.56-113-serial-8250_mtk-Enable-baud-clock-and-manage-.patch
+	patches.kernel.org/6.12.56-114-serial-sc16is7xx-remove-useless-enable-of-enh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
