PM: EM: Drop unused parameter from em_adjust_new_capacity() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11416,6 +11416,7 @@
 	patches.kernel.org/6.12.56-018-s390-mm-Use-__GFP_ACCOUNT-for-user-page-table.patch
 	patches.kernel.org/6.12.56-019-smb-server-let-smb_direct_flush_send_list-inv.patch
 	patches.kernel.org/6.12.56-020-Unbreak-make-tools-for-user-space-targets.patch
+	patches.kernel.org/6.12.56-021-PM-EM-Drop-unused-parameter-from-em_adjust_ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
