ACPICA: Work around bogus -Wstringop-overread warning since GCC 11 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11450,6 +11450,7 @@
 	patches.kernel.org/6.12.56-052-Revert-cpuidle-menu-Avoid-discarding-useful-i.patch
 	patches.kernel.org/6.12.56-053-slab-Avoid-race-on-slab-obj_exts-in-alloc_sla.patch
 	patches.kernel.org/6.12.56-054-slab-Fix-obj_ext-mistakenly-considered-NULL-d.patch
+	patches.kernel.org/6.12.56-055-ACPICA-Work-around-bogus-Wstringop-overread-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
