--- a/series.conf
+++ b/series.conf
@@ -11435,6 +11435,7 @@
 	patches.kernel.org/6.12.56-037-net-smc-fix-general-protection-fault-in-__smc.patch
 	patches.kernel.org/6.12.56-038-net-ethernet-ti-am65-cpts-fix-timestamp-loss-.patch
 	patches.kernel.org/6.12.56-039-arm64-mm-avoid-always-making-PTE-dirty-in-pte.patch
+	patches.kernel.org/6.12.56-040-ptp-ocp-Fix-typo-using-index-1-instead-of-i-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
