selftests: net: fix server bind failure in sctp_vrf.sh (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11428,6 +11428,7 @@
 	patches.kernel.org/6.12.56-030-can-bxcan-bxcan_start_xmit-use-can_dev_droppe.patch
 	patches.kernel.org/6.12.56-031-can-esd-acc_start_xmit-use-can_dev_dropped_sk.patch
 	patches.kernel.org/6.12.56-032-can-rockchip-canfd-rkcanfd_start_xmit-use-can.patch
+	patches.kernel.org/6.12.56-033-selftests-net-fix-server-bind-failure-in-sctp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
