--- a/series.conf
+++ b/series.conf
@@ -11402,6 +11402,7 @@
 	patches.kernel.org/6.12.56-004-hfs-make-proper-initalization-of-struct-hfs_f.patch
 	patches.kernel.org/6.12.56-005-hfsplus-fix-KMSAN-uninit-value-issue-in-__hfs.patch
 	patches.kernel.org/6.12.56-006-hfs-validate-record-offset-in-hfsplus_bmap_al.patch
+	patches.kernel.org/6.12.56-007-hfsplus-fix-KMSAN-uninit-value-issue-in-hfspl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
