net: bonding: fix possible peer notify event loss or dup issue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11440,6 +11440,7 @@
 	patches.kernel.org/6.12.56-042-net-phy-micrel-always-set-shared-phydev-for-L.patch
 	patches.kernel.org/6.12.56-043-net-mlx5-Fix-IPsec-cleanup-over-MPV-device.patch
 	patches.kernel.org/6.12.56-044-fs-notify-call-exportfs_encode_fid-with-s_umo.patch
+	patches.kernel.org/6.12.56-045-net-bonding-fix-possible-peer-notify-event-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
