--- a/series.conf
+++ b/series.conf
@@ -11511,6 +11511,7 @@
 	patches.kernel.org/6.12.56-113-serial-8250_mtk-Enable-baud-clock-and-manage-.patch
 	patches.kernel.org/6.12.56-114-serial-sc16is7xx-remove-useless-enable-of-enh.patch
 	patches.kernel.org/6.12.56-115-devcoredump-Fix-circular-locking-dependency-w.patch
+	patches.kernel.org/6.12.56-116-arm64-mte-Do-not-warn-if-the-page-is-already-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
