net: enetc: correct the value of ENETC_RXB_TRUESIZE (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11423,6 +11423,7 @@
 	patches.kernel.org/6.12.56-025-net-mlx5e-Return-1-instead-of-0-in-invalid-ca.patch
 	patches.kernel.org/6.12.56-026-rtnetlink-Allow-deleting-FDB-entries-in-user-.patch
 	patches.kernel.org/6.12.56-027-net-enetc-fix-the-deadlock-of-enetc_mdio_lock.patch
+	patches.kernel.org/6.12.56-028-net-enetc-correct-the-value-of-ENETC_RXB_TRUE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
