--- a/series.conf
+++ b/series.conf
@@ -11436,6 +11436,7 @@
 	patches.kernel.org/6.12.56-038-net-ethernet-ti-am65-cpts-fix-timestamp-loss-.patch
 	patches.kernel.org/6.12.56-039-arm64-mm-avoid-always-making-PTE-dirty-in-pte.patch
 	patches.kernel.org/6.12.56-040-ptp-ocp-Fix-typo-using-index-1-instead-of-i-i.patch
+	patches.kernel.org/6.12.56-041-sctp-avoid-NULL-dereference-when-chunk-data-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
