mm: prevent poison consumption when splitting THP (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11462,6 +11462,7 @@
 	patches.kernel.org/6.12.56-064-net-ravb-Ensure-memory-write-completes-before.patch
 	patches.kernel.org/6.12.56-065-selftests-mptcp-join-mark-flush-re-add-as-ski.patch
 	patches.kernel.org/6.12.56-066-selftests-mptcp-join-mark-implicit-tests-as-s.patch
+	patches.kernel.org/6.12.56-067-mm-prevent-poison-consumption-when-splitting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
