--- a/series.conf
+++ b/series.conf
@@ -11457,6 +11457,7 @@
 	patches.kernel.org/6.12.56-059-ocfs2-clear-extent-cache-after-moving-defragm.patch
 	patches.kernel.org/6.12.56-060-vsock-fix-lock-inversion-in-vsock_assign_tran.patch
 	patches.kernel.org/6.12.56-061-net-stmmac-dwmac-rk-Fix-disabling-set_clock_s.patch
+	patches.kernel.org/6.12.56-062-net-usb-rtl8150-Fix-frame-padding.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
