io_uring/sqpoll: be smarter on when to update the stime usage (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11486,6 +11486,7 @@
 	patches.kernel.org/6.12.56-088-io_uring-correct-__must_hold-annotation-in-io.patch
 	patches.kernel.org/6.12.56-089-sched-Remove-never-used-code-in-mm_cid_get.patch
 	patches.kernel.org/6.12.56-090-io_uring-sqpoll-switch-away-from-getrusage-fo.patch
+	patches.kernel.org/6.12.56-091-io_uring-sqpoll-be-smarter-on-when-to-update-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
