--- a/series.conf
+++ b/series.conf
@@ -11474,6 +11474,7 @@
 	patches.kernel.org/6.12.56-076-spi-airoha-do-not-keep-tx-rx-dma-buffer-alway.patch
 	patches.kernel.org/6.12.56-077-spi-airoha-switch-back-to-non-dma-mode-in-the.patch
 	patches.kernel.org/6.12.56-078-spi-airoha-fix-reading-writing-of-flashes-wit.patch
+	patches.kernel.org/6.12.56-079-drm-panthor-Fix-kernel-panic-on-partial-unmap.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
