--- a/series.conf
+++ b/series.conf
@@ -11467,6 +11467,7 @@
 	patches.kernel.org/6.12.56-069-spi-spi-nxp-fspi-add-extra-delay-after-dll-lo.patch
 	patches.kernel.org/6.12.56-070-arm64-dts-broadcom-bcm2712-Add-default-GIC-ad.patch
 	patches.kernel.org/6.12.56-071-arm64-dts-broadcom-bcm2712-Define-VGIC-interr.patch
+	patches.kernel.org/6.12.56-072-firmware-arm_scmi-Account-for-failed-debug-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
