--- a/series.conf
+++ b/series.conf
@@ -11425,6 +11425,7 @@
 	patches.kernel.org/6.12.56-027-net-enetc-fix-the-deadlock-of-enetc_mdio_lock.patch
 	patches.kernel.org/6.12.56-028-net-enetc-correct-the-value-of-ENETC_RXB_TRUE.patch
 	patches.kernel.org/6.12.56-029-dpaa2-eth-fix-the-pointer-passed-to-PTR_ALIGN.patch
+	patches.kernel.org/6.12.56-030-can-bxcan-bxcan_start_xmit-use-can_dev_droppe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
