--- a/series.conf
+++ b/series.conf
@@ -11499,6 +11499,7 @@
 	patches.kernel.org/6.12.56-101-x86-microcode-Fix-Entrysign-revision-check-fo.patch
 	patches.kernel.org/6.12.56-102-binder-remove-invalid-inc-weak-check.patch
 	patches.kernel.org/6.12.56-103-comedi-fix-divide-by-zero-in-comedi_buf_munge.patch
+	patches.kernel.org/6.12.56-104-mei-me-add-wildcat-lake-P-DID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
