--- a/series.conf
+++ b/series.conf
@@ -11420,6 +11420,7 @@
 	patches.kernel.org/6.12.56-022-PM-EM-Slightly-reduce-em_check_capacity_updat.patch
 	patches.kernel.org/6.12.56-023-PM-EM-Move-CPU-capacity-check-to-em_adjust_ne.patch
 	patches.kernel.org/6.12.56-024-PM-EM-Fix-late-boot-with-holes-in-CPU-topolog.patch
+	patches.kernel.org/6.12.56-025-net-mlx5e-Return-1-instead-of-0-in-invalid-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
