arch_topology: Fix incorrect error check in topology_parse_cpu_capacity() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11442,6 +11442,7 @@
 	patches.kernel.org/6.12.56-044-fs-notify-call-exportfs_encode_fid-with-s_umo.patch
 	patches.kernel.org/6.12.56-045-net-bonding-fix-possible-peer-notify-event-lo.patch
 	patches.kernel.org/6.12.56-046-dma-debug-don-t-report-false-positives-with-D.patch
+	patches.kernel.org/6.12.56-047-arch_topology-Fix-incorrect-error-check-in-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
