gpio: 104-idio-16: Define maximum valid register address offset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11445,6 +11445,7 @@
 	patches.kernel.org/6.12.56-047-arch_topology-Fix-incorrect-error-check-in-to.patch
 	patches.kernel.org/6.12.56-048-btrfs-directly-free-partially-initialized-fs_.patch
 	patches.kernel.org/6.12.56-049-gpio-pci-idio-16-Define-maximum-valid-registe.patch
+	patches.kernel.org/6.12.56-050-gpio-104-idio-16-Define-maximum-valid-registe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
