m68k: bitops: Fix find_*_bit() signatures (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11410,6 +11410,7 @@
 	patches.kernel.org/6.12.56-012-lkdtm-fortify-Fix-potential-NULL-dereference-.patch
 	patches.kernel.org/6.12.56-013-arm64-sysreg-Correct-sign-definitions-for-EIE.patch
 	patches.kernel.org/6.12.56-014-gfs2-Fix-unlikely-race-in-gdlm_put_lock.patch
+	patches.kernel.org/6.12.56-015-m68k-bitops-Fix-find_-_bit-signatures.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
