--- a/series.conf
+++ b/series.conf
@@ -11485,6 +11485,7 @@
 	patches.kernel.org/6.12.56-087-gpio-ljca-Fix-duplicated-IRQ-mapping.patch
 	patches.kernel.org/6.12.56-088-io_uring-correct-__must_hold-annotation-in-io.patch
 	patches.kernel.org/6.12.56-089-sched-Remove-never-used-code-in-mm_cid_get.patch
+	patches.kernel.org/6.12.56-090-io_uring-sqpoll-switch-away-from-getrusage-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
