--- a/series.conf
+++ b/series.conf
@@ -11470,6 +11470,7 @@
 	patches.kernel.org/6.12.56-072-firmware-arm_scmi-Account-for-failed-debug-in.patch
 	patches.kernel.org/6.12.56-073-firmware-arm_scmi-Fix-premature-SCMI_XFER_FLA.patch
 	patches.kernel.org/6.12.56-074-spi-airoha-return-an-error-for-continuous-mod.patch
+	patches.kernel.org/6.12.56-075-spi-airoha-add-support-of-dual-quad-wires-spi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
