fs/notify: call exportfs_encode_fid with s_umount (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11439,6 +11439,7 @@
 	patches.kernel.org/6.12.56-041-sctp-avoid-NULL-dereference-when-chunk-data-b.patch
 	patches.kernel.org/6.12.56-042-net-phy-micrel-always-set-shared-phydev-for-L.patch
 	patches.kernel.org/6.12.56-043-net-mlx5-Fix-IPsec-cleanup-over-MPV-device.patch
+	patches.kernel.org/6.12.56-044-fs-notify-call-exportfs_encode_fid-with-s_umo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
