drm/amd/display: increase max link count and fix link->enc NULL pointer access (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11463,6 +11463,7 @@
 	patches.kernel.org/6.12.56-065-selftests-mptcp-join-mark-flush-re-add-as-ski.patch
 	patches.kernel.org/6.12.56-066-selftests-mptcp-join-mark-implicit-tests-as-s.patch
 	patches.kernel.org/6.12.56-067-mm-prevent-poison-consumption-when-splitting-.patch
+	patches.kernel.org/6.12.56-068-drm-amd-display-increase-max-link-count-and-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
