--- a/series.conf
+++ b/series.conf
@@ -11397,6 +11397,7 @@
 	patches.kernel.org/6.12.55-134-dmaengine-Add-missing-cleanup-on-module-unloa.patch
 	patches.kernel.org/6.12.55-135-Linux-6.12.55.patch
 	patches.kernel.org/6.12.56-001-exec-Fix-incorrect-type-for-ret.patch
+	patches.kernel.org/6.12.56-002-nios2-ensure-that-memblock.current_limit-is-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
