--- a/series.conf
+++ b/series.conf
@@ -11405,6 +11405,7 @@
 	patches.kernel.org/6.12.56-007-hfsplus-fix-KMSAN-uninit-value-issue-in-hfspl.patch
 	patches.kernel.org/6.12.56-008-dlm-check-for-defined-force-value-in-dlm_lock.patch
 	patches.kernel.org/6.12.56-009-hfs-fix-KMSAN-uninit-value-issue-in-hfs_find_.patch
+	patches.kernel.org/6.12.56-010-hfsplus-return-EIO-when-type-of-hidden-direct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
