powerpc/32: Remove PAGE_KERNEL_TEXT to fix startup failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11411,6 +11411,7 @@
 	patches.kernel.org/6.12.56-013-arm64-sysreg-Correct-sign-definitions-for-EIE.patch
 	patches.kernel.org/6.12.56-014-gfs2-Fix-unlikely-race-in-gdlm_put_lock.patch
 	patches.kernel.org/6.12.56-015-m68k-bitops-Fix-find_-_bit-signatures.patch
+	patches.kernel.org/6.12.56-016-powerpc-32-Remove-PAGE_KERNEL_TEXT-to-fix-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
