--- a/series.conf
+++ b/series.conf
@@ -11456,6 +11456,7 @@
 	patches.kernel.org/6.12.56-058-MIPS-Malta-Fix-keyboard-resource-preventing-i.patch
 	patches.kernel.org/6.12.56-059-ocfs2-clear-extent-cache-after-moving-defragm.patch
 	patches.kernel.org/6.12.56-060-vsock-fix-lock-inversion-in-vsock_assign_tran.patch
+	patches.kernel.org/6.12.56-061-net-stmmac-dwmac-rk-Fix-disabling-set_clock_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
