--- a/series.conf
+++ b/series.conf
@@ -11468,6 +11468,7 @@
 	patches.kernel.org/6.12.56-070-arm64-dts-broadcom-bcm2712-Add-default-GIC-ad.patch
 	patches.kernel.org/6.12.56-071-arm64-dts-broadcom-bcm2712-Define-VGIC-interr.patch
 	patches.kernel.org/6.12.56-072-firmware-arm_scmi-Account-for-failed-debug-in.patch
+	patches.kernel.org/6.12.56-073-firmware-arm_scmi-Fix-premature-SCMI_XFER_FLA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
