--- a/series.conf
+++ b/series.conf
@@ -11503,6 +11503,7 @@
 	patches.kernel.org/6.12.56-105-objtool-rust-add-one-more-noreturn-Rust-funct.patch
 	patches.kernel.org/6.12.56-106-misc-fastrpc-Fix-dma_buf-object-leak-in-fastr.patch
 	patches.kernel.org/6.12.56-107-most-usb-Fix-use-after-free-in-hdm_disconnect.patch
+	patches.kernel.org/6.12.56-108-most-usb-hdm_probe-Fix-calling-put_device-bef.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
