--- a/series.conf
+++ b/series.conf
@@ -11408,6 +11408,7 @@
 	patches.kernel.org/6.12.56-010-hfsplus-return-EIO-when-type-of-hidden-direct.patch
 	patches.kernel.org/6.12.56-011-PCI-Test-for-bit-underflow-in-pcie_set_readrq.patch
 	patches.kernel.org/6.12.56-012-lkdtm-fortify-Fix-potential-NULL-dereference-.patch
+	patches.kernel.org/6.12.56-013-arm64-sysreg-Correct-sign-definitions-for-EIE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
