PM: EM: Slightly reduce em_check_capacity_update() overhead (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11417,6 +11417,7 @@
 	patches.kernel.org/6.12.56-019-smb-server-let-smb_direct_flush_send_list-inv.patch
 	patches.kernel.org/6.12.56-020-Unbreak-make-tools-for-user-space-targets.patch
 	patches.kernel.org/6.12.56-021-PM-EM-Drop-unused-parameter-from-em_adjust_ne.patch
+	patches.kernel.org/6.12.56-022-PM-EM-Slightly-reduce-em_check_capacity_updat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
