vsock: fix lock inversion in vsock_assign_transport() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11455,6 +11455,7 @@
 	patches.kernel.org/6.12.56-057-cifs-Fix-TCP_Server_Info-credits-to-be-signed.patch
 	patches.kernel.org/6.12.56-058-MIPS-Malta-Fix-keyboard-resource-preventing-i.patch
 	patches.kernel.org/6.12.56-059-ocfs2-clear-extent-cache-after-moving-defragm.patch
+	patches.kernel.org/6.12.56-060-vsock-fix-lock-inversion-in-vsock_assign_tran.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
