most: usb: Fix use-after-free in hdm_disconnect (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11502,6 +11502,7 @@
 	patches.kernel.org/6.12.56-104-mei-me-add-wildcat-lake-P-DID.patch
 	patches.kernel.org/6.12.56-105-objtool-rust-add-one-more-noreturn-Rust-funct.patch
 	patches.kernel.org/6.12.56-106-misc-fastrpc-Fix-dma_buf-object-leak-in-fastr.patch
+	patches.kernel.org/6.12.56-107-most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
