hfs: fix KMSAN uninit-value issue in hfs_find_set_zero_bits() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11404,6 +11404,7 @@
 	patches.kernel.org/6.12.56-006-hfs-validate-record-offset-in-hfsplus_bmap_al.patch
 	patches.kernel.org/6.12.56-007-hfsplus-fix-KMSAN-uninit-value-issue-in-hfspl.patch
 	patches.kernel.org/6.12.56-008-dlm-check-for-defined-force-value-in-dlm_lock.patch
+	patches.kernel.org/6.12.56-009-hfs-fix-KMSAN-uninit-value-issue-in-hfs_find_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
