x86/microcode: Fix Entrysign revision check for Zen1/Naples (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11496,6 +11496,7 @@
 	patches.kernel.org/6.12.56-098-usb-raw-gadget-do-not-limit-transfer-length.patch
 	patches.kernel.org/6.12.56-099-xhci-dbc-enable-back-DbC-in-resume-if-it-was-.patch
 	patches.kernel.org/6.12.56-100-xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC.patch
+	patches.kernel.org/6.12.56-101-x86-microcode-Fix-Entrysign-revision-check-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
