lkdtm: fortify: Fix potential NULL dereference on kmalloc failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11407,6 +11407,7 @@
 	patches.kernel.org/6.12.56-009-hfs-fix-KMSAN-uninit-value-issue-in-hfs_find_.patch
 	patches.kernel.org/6.12.56-010-hfsplus-return-EIO-when-type-of-hidden-direct.patch
 	patches.kernel.org/6.12.56-011-PCI-Test-for-bit-underflow-in-pcie_set_readrq.patch
+	patches.kernel.org/6.12.56-012-lkdtm-fortify-Fix-potential-NULL-dereference-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
