--- a/series.conf
+++ b/series.conf
@@ -11461,6 +11461,7 @@
 	patches.kernel.org/6.12.56-063-net-ravb-Enforce-descriptor-type-ordering.patch
 	patches.kernel.org/6.12.56-064-net-ravb-Ensure-memory-write-completes-before.patch
 	patches.kernel.org/6.12.56-065-selftests-mptcp-join-mark-flush-re-add-as-ski.patch
+	patches.kernel.org/6.12.56-066-selftests-mptcp-join-mark-implicit-tests-as-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
