--- a/series.conf
+++ b/series.conf
@@ -11441,6 +11441,7 @@
 	patches.kernel.org/6.12.56-043-net-mlx5-Fix-IPsec-cleanup-over-MPV-device.patch
 	patches.kernel.org/6.12.56-044-fs-notify-call-exportfs_encode_fid-with-s_umo.patch
 	patches.kernel.org/6.12.56-045-net-bonding-fix-possible-peer-notify-event-lo.patch
+	patches.kernel.org/6.12.56-046-dma-debug-don-t-report-false-positives-with-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
