--- a/series.conf
+++ b/series.conf
@@ -11444,6 +11444,7 @@
 	patches.kernel.org/6.12.56-046-dma-debug-don-t-report-false-positives-with-D.patch
 	patches.kernel.org/6.12.56-047-arch_topology-Fix-incorrect-error-check-in-to.patch
 	patches.kernel.org/6.12.56-048-btrfs-directly-free-partially-initialized-fs_.patch
+	patches.kernel.org/6.12.56-049-gpio-pci-idio-16-Define-maximum-valid-registe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
