--- a/series.conf
+++ b/series.conf
@@ -11489,6 +11489,7 @@
 	patches.kernel.org/6.12.56-091-io_uring-sqpoll-be-smarter-on-when-to-update-.patch
 	patches.kernel.org/6.12.56-092-Bluetooth-btintel-Add-DSBR-support-for-Blazar.patch
 	patches.kernel.org/6.12.56-093-platform-x86-amd-hsmp-Ensure-sock-metric_tbl_.patch
+	patches.kernel.org/6.12.56-094-USB-serial-option-add-UNISOC-UIS7720.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
