--- a/series.conf
+++ b/series.conf
@@ -11504,6 +11504,7 @@
 	patches.kernel.org/6.12.56-106-misc-fastrpc-Fix-dma_buf-object-leak-in-fastr.patch
 	patches.kernel.org/6.12.56-107-most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.kernel.org/6.12.56-108-most-usb-hdm_probe-Fix-calling-put_device-bef.patch
+	patches.kernel.org/6.12.56-109-tcpm-switch-check-for-role_sw-device-with-fw_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
