net: ethernet: ti: am65-cpts: fix timestamp loss due to race conditions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11433,6 +11433,7 @@
 	patches.kernel.org/6.12.56-035-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
 	patches.kernel.org/6.12.56-036-net-mlx5e-RX-Fix-generating-skb-from-non-line.patch
 	patches.kernel.org/6.12.56-037-net-smc-fix-general-protection-fault-in-__smc.patch
+	patches.kernel.org/6.12.56-038-net-ethernet-ti-am65-cpts-fix-timestamp-loss-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
