spi: spi-nxp-fspi: add extra delay after dll locked (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11464,6 +11464,7 @@
 	patches.kernel.org/6.12.56-066-selftests-mptcp-join-mark-implicit-tests-as-s.patch
 	patches.kernel.org/6.12.56-067-mm-prevent-poison-consumption-when-splitting-.patch
 	patches.kernel.org/6.12.56-068-drm-amd-display-increase-max-link-count-and-f.patch
+	patches.kernel.org/6.12.56-069-spi-spi-nxp-fspi-add-extra-delay-after-dll-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
