--- a/series.conf
+++ b/series.conf
@@ -11458,6 +11458,7 @@
 	patches.kernel.org/6.12.56-060-vsock-fix-lock-inversion-in-vsock_assign_tran.patch
 	patches.kernel.org/6.12.56-061-net-stmmac-dwmac-rk-Fix-disabling-set_clock_s.patch
 	patches.kernel.org/6.12.56-062-net-usb-rtl8150-Fix-frame-padding.patch
+	patches.kernel.org/6.12.56-063-net-ravb-Enforce-descriptor-type-ordering.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
