RISC-V: Define pgprot_dmacoherent() for non-coherent devices (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11475,6 +11475,7 @@
 	patches.kernel.org/6.12.56-077-spi-airoha-switch-back-to-non-dma-mode-in-the.patch
 	patches.kernel.org/6.12.56-078-spi-airoha-fix-reading-writing-of-flashes-wit.patch
 	patches.kernel.org/6.12.56-079-drm-panthor-Fix-kernel-panic-on-partial-unmap.patch
+	patches.kernel.org/6.12.56-080-RISC-V-Define-pgprot_dmacoherent-for-non-cohe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
