riscv: hwprobe: avoid uninitialized variable use in hwprobe_arch_id() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11477,6 +11477,7 @@
 	patches.kernel.org/6.12.56-079-drm-panthor-Fix-kernel-panic-on-partial-unmap.patch
 	patches.kernel.org/6.12.56-080-RISC-V-Define-pgprot_dmacoherent-for-non-cohe.patch
 	patches.kernel.org/6.12.56-081-RISC-V-Don-t-print-details-of-CPUs-disabled-i.patch
+	patches.kernel.org/6.12.56-082-riscv-hwprobe-avoid-uninitialized-variable-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
