--- a/series.conf
+++ b/series.conf
@@ -11454,6 +11454,7 @@
 	patches.kernel.org/6.12.56-056-can-netlink-can_changelink-allow-disabling-of.patch
 	patches.kernel.org/6.12.56-057-cifs-Fix-TCP_Server_Info-credits-to-be-signed.patch
 	patches.kernel.org/6.12.56-058-MIPS-Malta-Fix-keyboard-resource-preventing-i.patch
+	patches.kernel.org/6.12.56-059-ocfs2-clear-extent-cache-after-moving-defragm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
