--- a/series.conf
+++ b/series.conf
@@ -11412,6 +11412,7 @@
 	patches.kernel.org/6.12.56-014-gfs2-Fix-unlikely-race-in-gdlm_put_lock.patch
 	patches.kernel.org/6.12.56-015-m68k-bitops-Fix-find_-_bit-signatures.patch
 	patches.kernel.org/6.12.56-016-powerpc-32-Remove-PAGE_KERNEL_TEXT-to-fix-sta.patch
+	patches.kernel.org/6.12.56-017-drivers-perf-hisi-Relax-the-event-ID-check-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
