--- a/series.conf
+++ b/series.conf
@@ -11487,6 +11487,7 @@
 	patches.kernel.org/6.12.56-089-sched-Remove-never-used-code-in-mm_cid_get.patch
 	patches.kernel.org/6.12.56-090-io_uring-sqpoll-switch-away-from-getrusage-fo.patch
 	patches.kernel.org/6.12.56-091-io_uring-sqpoll-be-smarter-on-when-to-update-.patch
+	patches.kernel.org/6.12.56-092-Bluetooth-btintel-Add-DSBR-support-for-Blazar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
