--- a/series.conf
+++ b/series.conf
@@ -11449,6 +11449,7 @@
 	patches.kernel.org/6.12.56-051-xfs-fix-locking-in-xchk_nlinks_collect_dir.patch
 	patches.kernel.org/6.12.56-052-Revert-cpuidle-menu-Avoid-discarding-useful-i.patch
 	patches.kernel.org/6.12.56-053-slab-Avoid-race-on-slab-obj_exts-in-alloc_sla.patch
+	patches.kernel.org/6.12.56-054-slab-Fix-obj_ext-mistakenly-considered-NULL-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
