--- a/series.conf
+++ b/series.conf
@@ -11469,6 +11469,7 @@
 	patches.kernel.org/6.12.56-071-arm64-dts-broadcom-bcm2712-Define-VGIC-interr.patch
 	patches.kernel.org/6.12.56-072-firmware-arm_scmi-Account-for-failed-debug-in.patch
 	patches.kernel.org/6.12.56-073-firmware-arm_scmi-Fix-premature-SCMI_XFER_FLA.patch
+	patches.kernel.org/6.12.56-074-spi-airoha-return-an-error-for-continuous-mod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
