dpaa2-eth: fix the pointer passed to PTR_ALIGN on Tx path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11424,6 +11424,7 @@
 	patches.kernel.org/6.12.56-026-rtnetlink-Allow-deleting-FDB-entries-in-user-.patch
 	patches.kernel.org/6.12.56-027-net-enetc-fix-the-deadlock-of-enetc_mdio_lock.patch
 	patches.kernel.org/6.12.56-028-net-enetc-correct-the-value-of-ENETC_RXB_TRUE.patch
+	patches.kernel.org/6.12.56-029-dpaa2-eth-fix-the-pointer-passed-to-PTR_ALIGN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
