binder: remove "invalid inc weak" check (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11497,6 +11497,7 @@
 	patches.kernel.org/6.12.56-099-xhci-dbc-enable-back-DbC-in-resume-if-it-was-.patch
 	patches.kernel.org/6.12.56-100-xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC.patch
 	patches.kernel.org/6.12.56-101-x86-microcode-Fix-Entrysign-revision-check-fo.patch
+	patches.kernel.org/6.12.56-102-binder-remove-invalid-inc-weak-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
