spi: airoha: fix reading/writing of flashes with more than one plane per lun (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11473,6 +11473,7 @@
 	patches.kernel.org/6.12.56-075-spi-airoha-add-support-of-dual-quad-wires-spi.patch
 	patches.kernel.org/6.12.56-076-spi-airoha-do-not-keep-tx-rx-dma-buffer-alway.patch
 	patches.kernel.org/6.12.56-077-spi-airoha-switch-back-to-non-dma-mode-in-the.patch
+	patches.kernel.org/6.12.56-078-spi-airoha-fix-reading-writing-of-flashes-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
