exec: Fix incorrect type for ret (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11396,6 +11396,7 @@
 	patches.kernel.org/6.12.55-133-arm64-errata-Apply-workarounds-for-Neoverse-V.patch
 	patches.kernel.org/6.12.55-134-dmaengine-Add-missing-cleanup-on-module-unloa.patch
 	patches.kernel.org/6.12.55-135-Linux-6.12.55.patch
+	patches.kernel.org/6.12.56-001-exec-Fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
