--- a/series.conf
+++ b/series.conf
@@ -11409,6 +11409,7 @@
 	patches.kernel.org/6.12.56-011-PCI-Test-for-bit-underflow-in-pcie_set_readrq.patch
 	patches.kernel.org/6.12.56-012-lkdtm-fortify-Fix-potential-NULL-dereference-.patch
 	patches.kernel.org/6.12.56-013-arm64-sysreg-Correct-sign-definitions-for-EIE.patch
+	patches.kernel.org/6.12.56-014-gfs2-Fix-unlikely-race-in-gdlm_put_lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
