--- a/series.conf
+++ b/series.conf
@@ -11493,6 +11493,7 @@
 	patches.kernel.org/6.12.56-095-USB-serial-option-add-Quectel-RG255C.patch
 	patches.kernel.org/6.12.56-096-USB-serial-option-add-Telit-FN920C04-ECM-comp.patch
 	patches.kernel.org/6.12.56-097-usb-core-quirks-Add-Huawei-ME906S-to-wakeup-q.patch
+	patches.kernel.org/6.12.56-098-usb-raw-gadget-do-not-limit-transfer-length.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
