serial: 8250_exar: add support for Advantech 2 port card with Device ID 0x0018 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11507,6 +11507,7 @@
 	patches.kernel.org/6.12.56-109-tcpm-switch-check-for-role_sw-device-with-fw_.patch
 	patches.kernel.org/6.12.56-110-dt-bindings-usb-dwc3-imx8mp-dma-range-is-requ.patch
 	patches.kernel.org/6.12.56-111-serial-8250_dw-handle-reset-control-deassert-.patch
+	patches.kernel.org/6.12.56-112-serial-8250_exar-add-support-for-Advantech-2-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
