slab: Avoid race on slab->obj_exts in alloc_slab_obj_exts (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11448,6 +11448,7 @@
 	patches.kernel.org/6.12.56-050-gpio-104-idio-16-Define-maximum-valid-registe.patch
 	patches.kernel.org/6.12.56-051-xfs-fix-locking-in-xchk_nlinks_collect_dir.patch
 	patches.kernel.org/6.12.56-052-Revert-cpuidle-menu-Avoid-discarding-useful-i.patch
+	patches.kernel.org/6.12.56-053-slab-Avoid-race-on-slab-obj_exts-in-alloc_sla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
