--- a/series.conf
+++ b/series.conf
@@ -11512,6 +11512,7 @@
 	patches.kernel.org/6.12.56-114-serial-sc16is7xx-remove-useless-enable-of-enh.patch
 	patches.kernel.org/6.12.56-115-devcoredump-Fix-circular-locking-dependency-w.patch
 	patches.kernel.org/6.12.56-116-arm64-mte-Do-not-warn-if-the-page-is-already-.patch
+	patches.kernel.org/6.12.56-117-xfs-always-warn-about-deprecated-mount-option.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
