hfs: clear offset and space out of valid records in b-tree node (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11398,6 +11398,7 @@
 	patches.kernel.org/6.12.55-135-Linux-6.12.55.patch
 	patches.kernel.org/6.12.56-001-exec-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.56-002-nios2-ensure-that-memblock.current_limit-is-s.patch
+	patches.kernel.org/6.12.56-003-hfs-clear-offset-and-space-out-of-valid-recor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
