can: esd: acc_start_xmit(): use can_dev_dropped_skb() instead of can_dropped_invalid_skb() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11426,6 +11426,7 @@
 	patches.kernel.org/6.12.56-028-net-enetc-correct-the-value-of-ENETC_RXB_TRUE.patch
 	patches.kernel.org/6.12.56-029-dpaa2-eth-fix-the-pointer-passed-to-PTR_ALIGN.patch
 	patches.kernel.org/6.12.56-030-can-bxcan-bxcan_start_xmit-use-can_dev_droppe.patch
+	patches.kernel.org/6.12.56-031-can-esd-acc_start_xmit-use-can_dev_dropped_sk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
