--- a/series.conf
+++ b/series.conf
@@ -11451,6 +11451,7 @@
 	patches.kernel.org/6.12.56-053-slab-Avoid-race-on-slab-obj_exts-in-alloc_sla.patch
 	patches.kernel.org/6.12.56-054-slab-Fix-obj_ext-mistakenly-considered-NULL-d.patch
 	patches.kernel.org/6.12.56-055-ACPICA-Work-around-bogus-Wstringop-overread-w.patch
+	patches.kernel.org/6.12.56-056-can-netlink-can_changelink-allow-disabling-of.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
