--- a/series.conf
+++ b/series.conf
@@ -11505,6 +11505,7 @@
 	patches.kernel.org/6.12.56-107-most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.kernel.org/6.12.56-108-most-usb-hdm_probe-Fix-calling-put_device-bef.patch
 	patches.kernel.org/6.12.56-109-tcpm-switch-check-for-role_sw-device-with-fw_.patch
+	patches.kernel.org/6.12.56-110-dt-bindings-usb-dwc3-imx8mp-dma-range-is-requ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
