--- a/series.conf
+++ b/series.conf
@@ -11414,6 +11414,7 @@
 	patches.kernel.org/6.12.56-016-powerpc-32-Remove-PAGE_KERNEL_TEXT-to-fix-sta.patch
 	patches.kernel.org/6.12.56-017-drivers-perf-hisi-Relax-the-event-ID-check-in.patch
 	patches.kernel.org/6.12.56-018-s390-mm-Use-__GFP_ACCOUNT-for-user-page-table.patch
+	patches.kernel.org/6.12.56-019-smb-server-let-smb_direct_flush_send_list-inv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
