--- a/series.conf
+++ b/series.conf
@@ -11460,6 +11460,7 @@
 	patches.kernel.org/6.12.56-062-net-usb-rtl8150-Fix-frame-padding.patch
 	patches.kernel.org/6.12.56-063-net-ravb-Enforce-descriptor-type-ordering.patch
 	patches.kernel.org/6.12.56-064-net-ravb-Ensure-memory-write-completes-before.patch
+	patches.kernel.org/6.12.56-065-selftests-mptcp-join-mark-flush-re-add-as-ski.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
