--- a/series.conf
+++ b/series.conf
@@ -11498,6 +11498,7 @@
 	patches.kernel.org/6.12.56-100-xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC.patch
 	patches.kernel.org/6.12.56-101-x86-microcode-Fix-Entrysign-revision-check-fo.patch
 	patches.kernel.org/6.12.56-102-binder-remove-invalid-inc-weak-check.patch
+	patches.kernel.org/6.12.56-103-comedi-fix-divide-by-zero-in-comedi_buf_munge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
