PM: EM: Fix late boot with holes in CPU topology (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11419,6 +11419,7 @@
 	patches.kernel.org/6.12.56-021-PM-EM-Drop-unused-parameter-from-em_adjust_ne.patch
 	patches.kernel.org/6.12.56-022-PM-EM-Slightly-reduce-em_check_capacity_updat.patch
 	patches.kernel.org/6.12.56-023-PM-EM-Move-CPU-capacity-check-to-em_adjust_ne.patch
+	patches.kernel.org/6.12.56-024-PM-EM-Fix-late-boot-with-holes-in-CPU-topolog.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
