--- a/series.conf
+++ b/series.conf
@@ -11513,6 +11513,7 @@
 	patches.kernel.org/6.12.56-115-devcoredump-Fix-circular-locking-dependency-w.patch
 	patches.kernel.org/6.12.56-116-arm64-mte-Do-not-warn-if-the-page-is-already-.patch
 	patches.kernel.org/6.12.56-117-xfs-always-warn-about-deprecated-mount-option.patch
+	patches.kernel.org/6.12.56-118-ksmbd-transport_ipc-validate-payload-size-bef.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
