xhci: dbc: fix bogus 1024 byte prefix if ttyDBC read races with stall event (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11495,6 +11495,7 @@
 	patches.kernel.org/6.12.56-097-usb-core-quirks-Add-Huawei-ME906S-to-wakeup-q.patch
 	patches.kernel.org/6.12.56-098-usb-raw-gadget-do-not-limit-transfer-length.patch
 	patches.kernel.org/6.12.56-099-xhci-dbc-enable-back-DbC-in-resume-if-it-was-.patch
+	patches.kernel.org/6.12.56-100-xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
