PM: EM: Move CPU capacity check to em_adjust_new_capacity() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11418,6 +11418,7 @@
 	patches.kernel.org/6.12.56-020-Unbreak-make-tools-for-user-space-targets.patch
 	patches.kernel.org/6.12.56-021-PM-EM-Drop-unused-parameter-from-em_adjust_ne.patch
 	patches.kernel.org/6.12.56-022-PM-EM-Slightly-reduce-em_check_capacity_updat.patch
+	patches.kernel.org/6.12.56-023-PM-EM-Move-CPU-capacity-check-to-em_adjust_ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
