--- a/series.conf
+++ b/series.conf
@@ -11447,6 +11447,7 @@
 	patches.kernel.org/6.12.56-049-gpio-pci-idio-16-Define-maximum-valid-registe.patch
 	patches.kernel.org/6.12.56-050-gpio-104-idio-16-Define-maximum-valid-registe.patch
 	patches.kernel.org/6.12.56-051-xfs-fix-locking-in-xchk_nlinks_collect_dir.patch
+	patches.kernel.org/6.12.56-052-Revert-cpuidle-menu-Avoid-discarding-useful-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
