--- a/series.conf
+++ b/series.conf
@@ -11401,6 +11401,7 @@
 	patches.kernel.org/6.12.56-003-hfs-clear-offset-and-space-out-of-valid-recor.patch
 	patches.kernel.org/6.12.56-004-hfs-make-proper-initalization-of-struct-hfs_f.patch
 	patches.kernel.org/6.12.56-005-hfsplus-fix-KMSAN-uninit-value-issue-in-__hfs.patch
+	patches.kernel.org/6.12.56-006-hfs-validate-record-offset-in-hfsplus_bmap_al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
