hwmon: (sht3x) Fix error handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11478,6 +11478,7 @@
 	patches.kernel.org/6.12.56-080-RISC-V-Define-pgprot_dmacoherent-for-non-cohe.patch
 	patches.kernel.org/6.12.56-081-RISC-V-Don-t-print-details-of-CPUs-disabled-i.patch
 	patches.kernel.org/6.12.56-082-riscv-hwprobe-avoid-uninitialized-variable-us.patch
+	patches.kernel.org/6.12.56-083-hwmon-sht3x-Fix-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
