spi: airoha: do not keep {tx,rx} dma buffer always mapped (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11471,6 +11471,7 @@
 	patches.kernel.org/6.12.56-073-firmware-arm_scmi-Fix-premature-SCMI_XFER_FLA.patch
 	patches.kernel.org/6.12.56-074-spi-airoha-return-an-error-for-continuous-mod.patch
 	patches.kernel.org/6.12.56-075-spi-airoha-add-support-of-dual-quad-wires-spi.patch
+	patches.kernel.org/6.12.56-076-spi-airoha-do-not-keep-tx-rx-dma-buffer-alway.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
