sched: Remove never used code in mm_cid_get() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11484,6 +11484,7 @@
 	patches.kernel.org/6.12.56-086-drm-panic-Fix-qr_code-ensure-vmargin-is-posit.patch
 	patches.kernel.org/6.12.56-087-gpio-ljca-Fix-duplicated-IRQ-mapping.patch
 	patches.kernel.org/6.12.56-088-io_uring-correct-__must_hold-annotation-in-io.patch
+	patches.kernel.org/6.12.56-089-sched-Remove-never-used-code-in-mm_cid_get.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
