RISC-V: Don't print details of CPUs disabled in DT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11476,6 +11476,7 @@
 	patches.kernel.org/6.12.56-078-spi-airoha-fix-reading-writing-of-flashes-wit.patch
 	patches.kernel.org/6.12.56-079-drm-panthor-Fix-kernel-panic-on-partial-unmap.patch
 	patches.kernel.org/6.12.56-080-RISC-V-Define-pgprot_dmacoherent-for-non-cohe.patch
+	patches.kernel.org/6.12.56-081-RISC-V-Don-t-print-details-of-CPUs-disabled-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
