hfsplus: return EIO when type of hidden directory mismatch in hfsplus_fill_super() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34553,6 +34553,7 @@
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
 	patches.suse/xfs-rename-the-old_crc-variable-in-xlog_recover_process.patch
+	patches.suse/hfsplus-return-EIO-when-type-of-hidden-directory-mismatch-in-hfsplus_fill_super.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_followup.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_strcasecmp.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
