--- a/series.conf
+++ b/series.conf
@@ -34556,6 +34556,7 @@
 	patches.suse/hfsplus-return-EIO-when-type-of-hidden-directory-mismatch-in-hfsplus_fill_super.patch
 	patches.suse/hfs-validate-record-offset-in-hfsplus_bmap_alloc.patch
 	patches.suse/hfsplus-fix-KMSAN-uninit-value-issue-in-__hfsplus_ext_cache_extent.patch
+	patches.suse/hfsplus-fix-KMSAN-uninit-value-issue-in-hfsplus_delete_cat.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_followup.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_strcasecmp.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
