Refresh patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch.
[pfalcato: Fixup series.conf]

--- a/series.conf
+++ b/series.conf
@@ -57,6 +57,8 @@
 	# sorted patches
 	########################################################
 
+	# perf/perf-tools-next perf-tools-next
+	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 	########################################################
 	# end of sorted patches
 	########################################################
@@ -74,7 +76,6 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
-	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
