Refresh patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch.

--- a/series.conf
+++ b/series.conf
@@ -12790,7 +12790,7 @@
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
 
-	# out-of-tree patches
+	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
 	########################################################
