Revert "KVM: VMX: Move LOAD_IA32_PERF_GLOBAL_CTRL errata handling out of setup_vmcs_config()" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29722,6 +29722,7 @@
 	patches.suse/KVM-arm64-vgic-its-Add-a-data-length-check-in-vgic_i.patch
 	patches.suse/KVM-arm64-vgic-its-Clear-DTE-when-MAPD-unmaps-a-devi.patch
 	patches.suse/KVM-arm64-vgic-its-Clear-ITE-when-DISCARD-frees-an-I.patch
+	patches.suse/Revert-KVM-VMX-Move-LOAD_IA32_PERF_GLOBAL_CTRL-errat.patch
 	patches.suse/Input-hideep-add-missing-dependency-on-REGMAP_I2C.patch
 	patches.suse/Input-hycon-hy46xx-add-missing-dependency-on-REGMAP_.patch
 	patches.suse/fbdev-sh7760fb-Fix-a-possible-memory-leak-in-sh7760f.patch
