kdb: Replace deprecated strcpy() with memmove() in vkdb_printf() (bsc#1252939).

--- a/series.conf
+++ b/series.conf
@@ -12541,6 +12541,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/msft-hv-3348-scsi-storvsc-Remove-redundant-ternary-operators.patch
+	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
 	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
 	patches.suse/x86-tdx-Skip-clearing-reclaimed-pages-unless-X86_BUG_TDX_P.patch
