fbdev: valkyriefb: Fix reference count leak in valkyriefb_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34856,6 +34856,7 @@
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
 	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
+	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 
 	########################################################
 	# end of sorted patches
