fbdev: atyfb: Check if pll_ops->init_pll failed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34857,6 +34857,7 @@
 	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
+	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 
 	########################################################
 	# end of sorted patches
