--- a/series.conf
+++ b/series.conf
@@ -34853,6 +34853,7 @@
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
+	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
 
 	########################################################
 	# end of sorted patches
