--- a/series.conf
+++ b/series.conf
@@ -34854,6 +34854,7 @@
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
+	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 
 	########################################################
 	# end of sorted patches
