wifi: ath11k: Add missing platform IDs for quirk table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34848,6 +34848,7 @@
 	patches.suse/NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
+	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
 
 	########################################################
 	# end of sorted patches
