--- a/series.conf
+++ b/series.conf
@@ -34849,6 +34849,7 @@
 	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
 	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
+	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 
 	########################################################
 	# end of sorted patches
