--- a/series.conf
+++ b/series.conf
@@ -34859,6 +34859,7 @@
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
+	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 
 	########################################################
 	# end of sorted patches
