wifi: ath10k: Fix memory leak on unsupported WMI command (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34847,6 +34847,7 @@
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 	patches.suse/NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
+	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
 
 	########################################################
 	# end of sorted patches
