--- a/series.conf
+++ b/series.conf
@@ -34852,6 +34852,7 @@
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
+	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 
 	########################################################
 	# end of sorted patches
