Bluetooth: rfcomm: fix modem control handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56140,6 +56140,7 @@
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
+	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
 
 	########################################################
 	# end of sorted patches
