Bluetooth: btintel_pcie: Fix event packet loss issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56138,6 +56138,7 @@
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
+	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 
 	########################################################
 	# end of sorted patches
