Bluetooth: hci_core: Fix tracking of periodic advertisement (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56139,6 +56139,7 @@
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
+	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 
 	########################################################
 	# end of sorted patches
