--- a/series.conf
+++ b/series.conf
@@ -56137,6 +56137,7 @@
 	patches.suse/misc-fastrpc-Fix-dma_buf-object-leak-in-fastrpc_map_.patch
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
+	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 
 	########################################################
 	# end of sorted patches
