--- a/series.conf
+++ b/series.conf
@@ -12794,6 +12794,7 @@
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
+	patches.suse/Bluetooth-ISO-Fix-BIS-connection-dst_type-handling.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
