wifi: ath12k: free skb during idr cleanup callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12790,6 +12790,7 @@
 	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
 	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
+	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
