--- a/series.conf
+++ b/series.conf
@@ -12802,6 +12802,7 @@
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
+	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
