--- a/series.conf
+++ b/series.conf
@@ -12801,6 +12801,7 @@
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
+	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
