--- a/series.conf
+++ b/series.conf
@@ -12797,6 +12797,7 @@
 	patches.suse/Bluetooth-ISO-Fix-BIS-connection-dst_type-handling.patch
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
 	patches.suse/Revert-Bluetooth-L2CAP-convert-timeouts-to-secs_to_j.patch
+	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
