--- a/series.conf
+++ b/series.conf
@@ -12791,6 +12791,7 @@
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
 	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
+	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
