--- a/series.conf
+++ b/series.conf
@@ -12789,6 +12789,7 @@
 	patches.suse/NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
 	patches.suse/wifi-ath10k-Fix-memory-leak-on-unsupported-WMI-comma.patch
+	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
