--- a/series.conf
+++ b/series.conf
@@ -12804,6 +12804,7 @@
 	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
+	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
