--- a/series.conf
+++ b/series.conf
@@ -12787,6 +12787,7 @@
 	patches.suse/most-usb-Fix-use-after-free-in-hdm_disconnect.patch
 	patches.suse/most-usb-hdm_probe-Fix-calling-put_device-before-dev.patch
 	patches.suse/NFSD-Fix-crash-in-nfsd4_read_release.patch
+	patches.suse/wifi-mac80211-reset-FILS-discovery-and-unsol-probe-r.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
