--- a/series.conf
+++ b/series.conf
@@ -12805,6 +12805,7 @@
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
+	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
