Revert "Bluetooth: L2CAP: convert timeouts to secs_to_jiffies()" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12796,6 +12796,7 @@
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 	patches.suse/Bluetooth-ISO-Fix-BIS-connection-dst_type-handling.patch
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
+	patches.suse/Revert-Bluetooth-L2CAP-convert-timeouts-to-secs_to_j.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
