--- a/series.conf
+++ b/series.conf
@@ -12793,6 +12793,7 @@
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
 	patches.suse/usbnet-Prevents-free-active-kevent.patch
+	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
