--- a/series.conf
+++ b/series.conf
@@ -12792,6 +12792,7 @@
 	patches.suse/wifi-ath11k-Add-missing-platform-IDs-for-quirk-table.patch
 	patches.suse/wifi-ath12k-free-skb-during-idr-cleanup-callback.patch
 	patches.suse/wifi-brcmfmac-fix-crash-while-sending-Action-Frames-.patch
+	patches.suse/usbnet-Prevents-free-active-kevent.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
