--- a/series.conf
+++ b/series.conf
@@ -12721,6 +12721,7 @@
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
+	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
 	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
 	patches.suse/can-gs_usb-increase-max-interface-to-U8_MAX.patch
 	patches.suse/can-gs_usb-gs_make_candev-populate-net_device-dev_po.patch
