selftests/bpf: Use bpf_link__destroy in fill_link_info tests (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -19624,6 +19624,7 @@
 	patches.suse/net-page_pool-fix-general-protection-fault-in-page_p.patch
 	patches.suse/bpf-Fix-a-few-selftest-failures-due-to-llvm18-change.patch
 	patches.suse/bpftool-mark-orphaned-programs-during-prog-show.patch
+	patches.suse/selftests-bpf-Use-bpf_link__destroy-in-fill_link_inf.patch
 	patches.suse/xsk-Support-tx_metadata_len.patch
 	patches.suse/xsk-Add-TX-timestamp-and-TX-checksum-offload-support.patch
 	patches.suse/net-mlx5e-Implement-AF_XDP-TX-timestamp-and-checksum.patch
