--- a/series.conf
+++ b/series.conf
@@ -11459,6 +11459,7 @@
 	patches.suse/soc-qcom-mdt_loader-Fix-error-return-values-in-mdt_h.patch
 	patches.suse/soc-qcom-rpmh-rsc-Add-RSC-version-4-support.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
+	patches.suse/arm64-defconfig-Enable-Tegra-HSP-and-BPMP.patch
 	patches.suse/mmc-rtsx_usb_sdmmc-Fix-error-path-in-sd_set_power_mo.patch
 	patches.suse/mmc-sdhci-cadence-add-Mobileye-eyeQ-support.patch
 	patches.suse/mmc-sdhci-msm-Ensure-SD-card-power-isn-t-ON-when-car.patch
