--- a/series.conf
+++ b/series.conf
@@ -9644,6 +9644,7 @@
 	patches.suse/idpf-add-Tx-timestamp-capabilities-negotiation.patch
 	patches.suse/idpf-add-Tx-timestamp-flows.patch
 	patches.suse/idpf-add-support-for-Rx-timestamping.patch
+	patches.suse/sctp-Do-not-wake-readers-in-__sctp_write_space.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
