--- a/series.conf
+++ b/series.conf
@@ -12112,6 +12112,7 @@
 	patches.suse/i40e-Fix-potential-invalid-access-when-MAC-list-is-e.patch
 	patches.suse/ixgbe-fix-incorrect-map-used-in-eee-linkmode.patch
 	patches.suse/e1000e-fix-heap-overflow-in-e1000_set_eeprom.patch
+	patches.suse/ipv4-Fix-NULL-vs-error-pointer-check-in-inet_blackho.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
 	patches.suse/ppp-fix-memory-leak-in-pad_compress_skb.patch
 	patches.suse/nouveau-fix-disabling-the-nonstall-irq-due-to-storm-.patch
