--- a/series.conf
+++ b/series.conf
@@ -12463,6 +12463,7 @@
 	patches.suse/media-i2c-tc358743-Fix-use-after-free-bugs-caused-by.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
+	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/msft-hv-3344-net-mana-Reduce-waiting-time-if-HWC-not-responding.patch
