sctp: avoid NULL dereference when chunk data buffer is missing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12767,6 +12767,7 @@
 	patches.suse/can-esd-acc_start_xmit-use-can_dev_dropped_skb-inste.patch
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
+	patches.suse/sctp-avoid-NULL-dereference-when-chunk-data-buffer-i.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 	patches.suse/gpio-104-idio-16-Define-maximum-valid-register-addre.patch
 	patches.suse/gpio-pci-idio-16-Define-maximum-valid-register-addre.patch
