--- a/series.conf
+++ b/series.conf
@@ -6348,6 +6348,7 @@
 	patches.suse/nvme-tcp-fix-signedness-bug-in-nvme_tcp_init_connect.patch
 	patches.suse/btrfs-zoned-fix-extent-range-end-unlock-in-cow_file_.patch
 	patches.suse/btrfs-fix-a-leaked-chunk-map-issue-in-read_one_chunk.patch
+	patches.suse/coredump-Only-sort-VMAs-when-core_sort_vma-sysctl-is.patch
 	patches.suse/mm-slab-kvfree_rcu-Switch-to-WQ_MEM_RECLAIM-wq.patch
 	patches.suse/s390-traps-Fix-test_monitor_call-inline-assembly.patch
 	patches.suse/x86-amd_nb-Use-rdmsr_safe-in-amd_get_mmconfig_range.patch
