--- a/series.conf
+++ b/series.conf
@@ -6367,6 +6367,7 @@
 	patches.suse/selftests-damon-damon_nr_regions-sort-collected-regi.patch
 	patches.suse/mm-fix-kernel-BUG-when-userfaultfd_move-encounters-swapcac.patch
 	patches.suse/mm-don-t-skip-arch_sync_kernel_mappings-in-error-pat.patch
+	patches.suse/mm-fix-finish_fault-handling-for-large-folios.patch
 	patches.suse/Revert-mm-page_alloc.c-don-t-show-protection-in-zone.patch
 	patches.suse/rapidio-fix-an-API-misues-when-rio_add_net-fails.patch
 	patches.suse/rapidio-add-check-for-rio_add_net-in-rio_scan_alloc_.patch
