mm/mremap: correctly account old mapping after MREMAP_DONTUNMAP remap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12765,6 +12765,7 @@
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
+	patches.suse/mm-mremap-correctly-account-old-mapping-after-MREMAP.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0-after-hibernate.patch
 	patches.suse/net-usb-rtl8150-Fix-frame-padding.patch
