Bluetooth: hci_core: Fix tracking of periodic advertisement (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12799,6 +12799,7 @@
 	patches.suse/Revert-Bluetooth-L2CAP-convert-timeouts-to-secs_to_j.patch
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
+	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 
 	# tip/tip
 	patches.suse/x86-microcode-AMD-Limit-Entrysign-signature-checking-to-kn.patch
