selftests/bpf: Fix a fd leak in error paths in open_netns (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25083,6 +25083,7 @@
 	patches.suse/bpf-replace-bpf_timer_init-with-a-generic-helper.patch
 	patches.suse/bpf-replace-bpf_timer_set_callback-with-a-generic-he.patch
 	patches.suse/bpf-replace-bpf_timer_cancel_and_free-with-a-generic.patch
+	patches.suse/selftests-bpf-Fix-a-fd-leak-in-error-paths-in-open_n.patch
 	patches.suse/sctp-prefer-struct_size-over-open-coded-arithmetic.patch
 	patches.suse/netpoll-Fix-race-condition-in-netpoll_owner_active.patch
 	patches.suse/net-dsa-mv88e6xxx-Correct-check-for-empty-list.patch
