btrfs: don't allow adding block device of less than 1 MB (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12167,6 +12167,7 @@
 	patches.suse/btrfs-fix-squota-compressed-stats-leak.patch
 	patches.suse/btrfs-fix-corruption-reading-compressed-range-when-b.patch
 	patches.suse/btrfs-fix-subvolume-deletion-lockup-caused-by-inodes.patch
+	patches.suse/btrfs-don-t-allow-adding-block-device-of-less-than-1.patch
 	patches.suse/cpufreq-amd-pstate-Fix-setting-of-CPPC.min_perf-in-a.patch
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
