drm/amd/pm: fix smu table id bound check issue in smu_cmn_update_table() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34865,6 +34865,7 @@
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
+	patches.suse/drm-amd-pm-fix-smu-table-id-bound-check-issue-in-smu.patch
 
 	########################################################
 	# end of sorted patches
