drm/etnaviv: fix flush sequence logic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34870,6 +34870,7 @@
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va-501672e.patch
 	patches.suse/drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.suse/drm-msm-dpu-Fix-pixel-extension-sub-sampling.patch
+	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 
 	########################################################
 	# end of sorted patches
