drm/amd/pm/powerplay/smumgr: Fix PCIeBootLinkLevel value on Iceland (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34867,6 +34867,7 @@
 	patches.suse/drm-mediatek-Fix-device-use-after-free-on-unbind.patch
 	patches.suse/drm-amd-pm-fix-smu-table-id-bound-check-issue-in-smu.patch
 	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va.patch
+	patches.suse/drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLevel-va-501672e.patch
 
 	########################################################
 	# end of sorted patches
